# momentum

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/rebelist/momentum/application/use_cases/: __init__.py  forecast.py
src/rebelist/momentum/config/: __init__.py  container.py
src/rebelist/momentum/domain/: __init__.py  models.py  services.py
src/rebelist/momentum/infrastructure/finance/: __init__.py  yahoo_provider.py
src/rebelist/momentum/infrastructure/forecast/: __init__.py  monte_carlo_simulator.py
src/rebelist/momentum/presentation/: dashboard.py  models.py
tests/application/use_cases/: test_forecast.py
tests/config/: test_container.py
tests/infrastructure/finance/: test_yahoo_provider.py
tests/infrastructure/forecast/: test_monte_carlo_simulator.py
tests/presentation/: test_dashboard.py  test_models.py
